@@ -186,6 +186,9 @@ class HTMLReportBase:
     def _copy_raw_data(self):
         """Copy raw test results to the output directory."""
 
+        if self.relocatable == "noraw":
+            return (None, None, None)
+
         # Paths to the stats directory.
         stats_paths = {}
         # Paths to the logs directory.
@@ -198,7 +201,7 @@ class HTMLReportBase:
             resrootdir = "raw-" + res.reportid
             dstpath = self.outdir.joinpath(resrootdir)
 
-            if self.relocatable:
+            if self.relocatable == "copy":
                 FSHelpers.copy_dir(srcpath, dstpath, exist_ok=True, ignore=["html-report"])
                 FSHelpers.set_default_perm(dstpath)
             else:
@@ -706,6 +709,9 @@ class HTMLReportBase:
         dataframes).
         """
 
+        if self.relocatable not in ("copy", "noraw", "symlink"):
+            raise Error("bad 'relocatable' value, use one of: copy, noraw, symlink")
+
         # Load the required datapoints into memory.
         self._load_results()
 
@@ -885,10 +891,12 @@ class HTMLReportBase:
             raise Error("'exclude_xaxes' and 'exclude_yaxes' must both be 'None' or both not be "
                         "'None'")
 
-        # Users can change this to make the reports relocatable. In this case the statistics and
-        # other stuff will be copied from the test result directories to the output directory. By
-        # default symlinks are used.
-        self.relocatable = True
+        # Users can change this to 'copy' or 'noraw' to make the reports relocatable. In the former
+        # case the raw results will be copied from the test result directories to the output
+        # directory. In the latter case, the raw results won't be referenced at all, neither from
+        # the HTML report, nor at the file-system level. The logs, statistics and other stuff from
+        # the raw result will also be excluded.
+        self.relocatable = "symlink"
 
         # The first result is the 'reference' result.
         self._refres = rsts[0]
